--- a/3. Build a Blackjack game/12. Add basic styling/index.css
+++ b/3. Build a Blackjack game/12. Add basic styling/index.css
@@ -1,13 +1,24 @@
 /* Complete the CSS styling according to the provided design */
 
 body {
-    
+  background-image: url("./images/table.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  text-align: center;
+  color: white;
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+    "Lucida Sans", Arial, sans-serif;
 }
 
 h1 {
-    color: goldenrod;
+  color: goldenrod;
+  font-size: 4rem;
+}
+
+p {
+  font-size: 2rem;
 }
 
 #message-el {
-    
+  font-style: italic;
 }
