--- a/3. Build a Blackjack game/13. Make the start button work/index.css
+++ b/3. Build a Blackjack game/13. Make the start button work/index.css
@@ -1,27 +1,42 @@
 body {
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', Arial, sans-serif;
-    background-image: url("images/table.png");
-    background-size: cover;
-    font-weight: bold;
-    color: white;
-    text-align: center;
+  background-image: url("./images/table.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  text-align: center;
+  color: white;
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+    "Lucida Sans", Arial, sans-serif;
 }
 
 h1 {
-    color: goldenrod;
+  color: goldenrod;
+  font-size: 4rem;
+}
+
+p {
+  font-size: 2rem;
 }
 
 #message-el {
-    font-style: italic;
+  font-style: italic;
 }
-
 /* 
 3. Style the button according to the provided design
 text color - #016f32
 width      - 150px
 background - goldenrod
  */
- 
-button {
 
+button {
+  color: #016f32;
+  background-color: goldenrod;
+  padding: 6px 18px;
+  font-size: 1.5rem;
+  font-weight: 700;
+  border: none;
+  border-radius: 6px;
+  text-transform: capitalize;
+}
+button:hover {
+  scale: 110%;
 }
