--- a/5. Build a Chrome Extension/03. Style the button and input tag/index.css
+++ b/5. Build a Chrome Extension/03. Style the button and input tag/index.css
@@ -1,7 +1,7 @@
 body {
-    margin: 0;
-    padding: 10px;
-    font-family: Arial, Helvetica, sans-serif;
+  margin: 0;
+  padding: 10px;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 /*
@@ -12,11 +12,18 @@ green color -> #5f9341
 
 */
 
-
 input {
-    
+  width: 100%;
+  padding: 16px;
+  border: 2px solid #5f9341;
+  margin-bottom: 10px;
 }
 
 button {
-    
+  background-color: #5f9341;
+  color: white;
+  font-weight: 600;
+  text-transform: uppercase;
+  padding: 14px 16px;
+  border: 0;
 }
